# difengine

./: CODE_OF_CONDUCT.md  LICENSE  Makefile.am  README  README.md  configure.ac  meson.build  notes.txt
difengine/: bytesobject.c  code.c  complexobject.c  dis.c  evaluate.c  floatobject.c  frame.c  hashobject.c  intobject.c  listobject.c  memory.c  meson.build  object.c  objectops.c  stringobject.c
doc/: README.rst  example.sh
docs/api/: Doxyfile  index.md
docs/source/: conf.py  index.rst  master.rst
docs/source/gsg/: index.rst
front/: README  ast.c  lexer.c  meson.build  parser.c
grammar/: Absyn.c  Absyn.h  Lexer.c  Makefile  Parser.c  Parser.h  Printer.c  Printer.h  README  Skeleton.c  Skeleton.h  Test.c  Testcalc  calc.cf  calc.l  calc.y  dfng.cf  dfng.l  dfng.y
include/: Absyn.h  Parser.h  Printer.h  Skeleton.h  ast.h  bytesobject.h  code.h  complexobject.h  defines.h  dferror.h  difengine.h  dis.h  evaluate.h  floatobject.h  frame.h  hashobject.h  intobject.h  lexer.h  listobject.h  memory.h  object.h  objectops.h  opcode.h  parser.h  stringobject.h
include/internal/: container.h  tokens.h
scripts/: README  cleanupbnfc.sh  run_tests.py  test_build_run.sh  unredef.py
tests/: code.c  list.c  meson.build  object.c
tests/api/: code.c  evaluate.c  frame.c  hash.c  int.c  lexer.c  list.c  meson.build  object.c  parser.c  suite.json
